# PixPox

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  config.yml  heaptrack.cargo.33180.zst  heaptrack.cargo.33241.zst  heaptrack.sandbox.33508.zst  heaptrack.sandbox.33667.zst  heaptrack.sandbox.33755.zst  heaptrack.sandbox.34798.zst  heaptrack.sandbox.37438.zst  heaptrack.sandbox.57719.zst  meeting  rustfmt.toml
benches/: benchmark.rs
crates/pixpox_app/: Cargo.toml
crates/pixpox_app/src/: lib.rs
crates/pixpox_common/: Cargo.toml
crates/pixpox_common/src/: camera.rs  global_pixel_map.rs  lib.rs
crates/pixpox_ecs/: Cargo.toml
crates/pixpox_ecs/src/: component.rs  components.rs  entity.rs  lib.rs  query.rs  storage.rs  world.rs
crates/pixpox_ecs/src/component/: mod.rs
crates/pixpox_ecs/src/components/: mod.rs
crates/pixpox_ecs/src/entity/: mod.rs
crates/pixpox_ecs/src/world/: mod.rs
crates/pixpox_physics/: Cargo.toml
crates/pixpox_physics/src/: lib.rs
crates/pixpox_renderer/: Cargo.toml
crates/pixpox_renderer/src/: builder.rs  camera.rs  global_pixel_map.rs  gui.rs  lib.rs  renderer.rs  types.rs
crates/pixpox_renderer/src/material/node/: const_float.rs  multiply.rs
crates/pixpox_renderer/src/renderer/: mod.rs  wgpu_bindings.rs  wgpu_render_pipeline.rs  wgpu_renderer.rs
crates/pixpox_renderer/src/resource/: resource.rs
crates/pixpox_renderer/src/scene/: camera.rs  mesh.rs  mod.rs  node.rs  scene.rs
crates/pixpox_utils/: Cargo.toml
crates/pixpox_utils/src/: CA.rs  lib.rs  stats.rs
crates/pixpox_utils/src/CA/: cell_realm.rs  conway.rs  letters.rs  mod.rs  rules.rs
examples/conway/: AppConfig.toml  camera.rs  custom_components.rs  global_pixel_map.rs  main.rs  types.rs
examples/ecs/: AppConfig.toml  custom_components.rs  global_pixel_map.rs  main.rs
examples/physics-ca/: AppConfig.toml  custom_components.rs  main.rs
examples/sandbox/: AppConfig.toml  components.rs  custom_components.rs  main.rs  sandbox.rs
pixelox/: Cargo.toml
pixelox/src/: lib.rs  main.rs  pixel.rs  types.rs
pixelox/src/shaders/: shader.wgsl
pixpox/: Cargo.toml
pixpox/src/: constants.rs  lib.rs  main.rs
pixpox/src/level/: mod.rs
pixpox/src/physics/compute/: mod.rs
pixpox/src/renderer/: mod.rs  utils.rs
sandbox/: Cargo.toml
sandbox/src/: main.rs
src/: lib.rs
tools/: combine.py  merged-file.txt
