[package]
name = "pixpox"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/*",
]

[profile.release]
debug = true

[[bench]]
name = "benchmark"
harness = false

[dev-dependencies]
criterion = "0.4"

[dependencies]
winit = "0.27"
env_logger = "0.9"
log = "0.4"
wgpu = "0.13"
pollster = "0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
rand = "0.8"
dotenv = "0.15.0"
randomize = "3"
byteorder = "1"
getrandom = "0.2"
line_drawing = "1"
arrayref = "0.3.6"
lazy_static = "1.4.0"
imgui = "0.10.0"
winit_input_helper = "0.13.0"

# Local Crates
pixpox_app = { path = "crates/pixpox_app" }
pixpox_ecs = { path = "crates/pixpox_ecs" }
pixpox_physics = { path = "crates/pixpox_physics" }
pixpox_renderer = { path = "crates/pixpox_renderer" }
pixpox_utils = { path = "crates/pixpox_utils" }

[dependencies.confy]
version = "0.5.1"
