[package]
name = "pixpox_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.13"
winit = "0.27"
env_logger = "0.9"
log = "0.4"
winit_input_helper = "0.13.0"
raw-window-handle = "0.5"
string-interner = "0.14.0"


# Local crates
pixpox_ecs = { path = "../pixpox_ecs" }
pixpox_renderer = { path = "../pixpox_renderer" }
crossbeam = "0.8.2"
