[package]
name = "pixpox_ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27"
queues = "1.0.2"
bit-set = "0.5.3"
bit-vec = "0.6.3"
env_logger = "0.9"
log = "0.4"
ticktock = "0.8.0"
string-interner = "0.14.0"
rayon = "1.6.1"
winit_input_helper = "0.13.0"
arc-interner = "0.7.0"
lasso = { version = "0.6.0", features = ["multi-threaded"] }

# Local Crates
pixpox_utils = { path = "../pixpox_utils" }
pixpox_renderer = { path = "../pixpox_renderer" }
