[package]
name = "pixpox_renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.27"
env_logger = "0.9"
log = "0.4"
wgpu = "0.15"
pollster = "0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
rand = "0.8"
ultraviolet = "0.9"
raw-window-handle = "0.5"
thiserror = "1.0"
imgui = "0.10.0"
imgui-winit-support = "0.10.0"
imgui-wgpu = "0.22.0"

# Local Crates
pixpox_utils = { path = "../pixpox_utils" }
pixpox_ecs = { path = "../pixpox_ecs" }
pixpox_common = { path = "../pixpox_common" }
